test/testdata/functions/too_many_args_error.lox
fun add(x, y) {
    print x + y;
}

add(1, 2, 3); // error: add() accepts 2 arguments but 3 were given
